--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
+.cache/
+coverage/
+dist/*
+!dist/index.html
+node_modules/
+*.log
+.env
 
 # misc
 .DS_Store
